@@ -18,10 +18,10 @@ local inputs = {
 }
 
 local tier_map = {
-    ["separator"] = {tier = 1},
-    ["separator-2"] = {tier = 2},
-    ["separator-3"] = {tier = 3},
-    ["separator-4"] = {tier = 4},
+    ["separator"] = {tier = 1, prog_tier = 2},
+    ["separator-2"] = {tier = 2, prog_tier = 3},
+    ["separator-3"] = {tier = 3, prog_tier = 4},
+    ["separator-4"] = {tier = 4, prog_tier = 5},
 }
 
 -- Reskin entities, create and assign extra details
